refactor: ChatRoom 및 관련 서비스/레포지토리 제거
- ChatRoom 엔티티와 관련 서비스(BasicChatRoomService, JpaChatRoomService) 삭제.
- 관련 레포지토리와 메서드 제거(FileChatRoomRepository, JcfChatRoomRepository 등).
- 사용되지 않는 클래스(RoleType, JpaChannelService 등) 삭제.
- 코드 및 구조 단순화.