@@ -6,10 +6,12 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Repository;
 
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 @Profile("test")
@@ -22,35 +24,59 @@ public class JcfFriendRequestRepository extends JcfBaseRepository<FriendRequest>
 
     @Override
     public boolean existsBySenderIdAndReceiverId(UUID senderId, UUID receiverId) {
-        if (senderId == null || receiverId == null || senderId == receiverId) return false;
-        return data.values().stream()
-                .filter(fr -> !fr.isDeleted())
+        Objects.requireNonNull(senderId, "senderId must not be null");
+        Objects.requireNonNull(receiverId, "receiverId must not be null");
+        if (senderId.equals(receiverId)) return false;
+        return findAll().stream()
                 .anyMatch(fr -> senderId.equals(fr.getSenderId()) && receiverId.equals(fr.getReceiverId()));
     }
 
     @Override
-    public void clear(UUID userId) {
-        if (userId == null) return;
-        Set<UUID> ids = findAll().stream()
-                .filter(fr -> userId.equals(fr.getSenderId()) || userId.equals(fr.getReceiverId()))
-                .map(FriendRequest::getId)
-                .collect(Collectors.toSet());
-        deleteAllByIds(ids);
+    public boolean existsBetween(UUID userA, UUID userB) {
+        Objects.requireNonNull(userA, "userA must not be null");
+        Objects.requireNonNull(userB, "userB must not be null");
+        if (userA.equals(userB)) return false;
+        return findAll().stream().anyMatch(fr ->
+                (userA.equals(fr.getSenderId()) && userB.equals(fr.getReceiverId()))
+                        || (userB.equals(fr.getSenderId()) && userA.equals(fr.getReceiverId()))
+        );
     }
 
     @Override
-    public List<FriendRequest> getSentRequests(UUID sender) {
-        if (sender == null) return List.of();
+    public List<FriendRequest> findAllBySenderId(UUID senderId) {
+        Objects.requireNonNull(senderId, "senderId must not be null");
         return findAll().stream()
-                .filter(fr -> sender.equals(fr.getSenderId()))
+                .filter(fr -> senderId.equals(fr.getSenderId()))
                 .sorted(Comparator.comparing(FriendRequest::getCreatedAt).reversed())
                 .toList();
     }
 
     @Override
-    public List<FriendRequest> getReceivedRequests(UUID receiver) {
-        return data.values().stream()
-                .filter(fr -> fr.getReceiverId().equals(receiver))
-                .collect(Collectors.toList());
+    public List<FriendRequest> findAllByReceiverId(UUID receiverId) {
+        Objects.requireNonNull(receiverId, "receiverId must not be null");
+        return findAll().stream()
+                .filter(fr -> receiverId.equals(fr.getReceiverId()))
+                .sorted(Comparator.comparing(FriendRequest::getCreatedAt).reversed())
+                .toList();
+    }
+
+    @Override
+    public int softDeleteAllByUserId(UUID userId) {
+        Objects.requireNonNull(userId, "userId must not be null");
+        Set<UUID> ids = new HashSet<>();
+        findAll().stream()
+                .filter(fr -> userId.equals(fr.getSenderId()) || userId.equals(fr.getReceiverId()))
+                .forEach(fr -> ids.add(fr.getId()));
+        return softDeleteAllByIds(ids);
+    }
+
+    @Override
+    public boolean softDeleteBySenderAndReceiver(UUID senderId, UUID receiverId) {
+        Objects.requireNonNull(senderId, "senderId must not be null");
+        Objects.requireNonNull(receiverId, "receiverId must not be null");
+        Optional<FriendRequest> fr = findAll().stream()
+                .filter(e -> senderId.equals(e.getSenderId()) && receiverId.equals(e.getReceiverId()))
+                .findFirst();
+        return fr.map(e -> softDeleteById(e.getId())).orElse(false);
     }
 }
